style/main.css
/* ... */
.up_pftv_navruler svg {
    vertical-align: bottom;
    font-size: 14px;
}

.up_pftv_navruler svg {
    /*background-color: #FDF7EF;*/
}

/*Category and type tracks*/
.up_pftv_category {
    margin-bottom: .1em;
    border-bottom: .1em solid #b2f5ff;
    display: table;
    width: 100%;
}

.up_pftv_category-name, .up_pftv_track-header {
    font-weight: 400;
    line-height: 2.1em;
    width: 198px;
    vertical-align: bottom;
    padding: .5em;
    border: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.up_pftv_category-name {
    background-color: #b2f5ff;
    display: table-cell;
    box-sizing: border-box;
}

.up_pftv_category a:hover {
    background-color: #80EEFF;
    border-bottom: none;
    text-decoration: none;
}

.up_pftv_track-header {
    display: table-cell;
    background-color: #d9faff;
    box-sizing: border-box;
    /*line-height: 1.6em;
    margin: .05em 0;*/
}

.up_pftv_category-viewer, .up_pftv_track, .up_pftv_aaviewer {
    position: relative;
    vertical-align: bottom;
    /*width: 760px;*/
}
.up_pftv_track {
    display: table-cell;
}

.up_pftv_aaviewer {
    display: table-cell;
}

.up_pftv_category-viewer {
    display: table-cell;
}

.up_pftv_category-viewer svg, .up_pftv_track svg, .up_pftv_aaviewer svg {
    vertical-align: bottom;
}

.up_pftv_category-name {
    cursor: pointer;
}

.up_pftv_track-header-container {
    vertical-align: top;
    margin-top: 1px;
    background-color: #D9FAFF;
}

.up_pftv_category-tracks {
    display: table-row;
}

.up_pftv_track {
    border-top: 1px #b2f5ff solid;
}

.up_pftv_category-name.up_pftv_arrow-right:before {
    content: ' ';
    display: inline-block;
    width: 0;
    height: 0;
    border-top: 5px solid transparent;
    border-bottom: 5px solid transparent;
    border-left: 5px solid #333;
    margin-right: 5px;
}

.up_pftv_category-name.up_pftv_arrow-down:before {
    content: ' ';
    display: inline-block;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid #333;
    margin-right: 5px;
}

.up_pftv_category-disabled {
    opacity: 0;
    display: none;
}

/* Ruler */
.up_pftv_navruler .axis {
    font-size: 12px;
}

.up_pftv_navruler line, .up_pftv_navruler path {
    fill: none;
    stroke: black;
}

.up_pftv_aaviewer path {
    display: no;
}

.up_pftv_navruler .up_pftv_viewport {
    fill: #D7DCE0;
    fill-opacity: 0.4;
}

.up_pftv_navruler path.up_pftv_trapezoid {
    fill: #D7DCE0;
    stroke: none;
    fill-opacity: 0.4;
    stroke: none;
}

.up_pftv_highlight, .up_pftv_amino_acid_selector {
    fill: #FFE999;
    fill-opacity: 1;
}

.up_pftv_navruler .handle {
    fill: #D7DCE0;
    fill-opacity: 1;
    stroke: #000;
    stroke-width: 1px;
}

.up_pftv_navruler .handle:hover {
    fill-opacity: 1;
}

.up_pftv_aaviewer text {
    font-family: "Lucida Console", Monaco, monospace;
    font-size: 12px;
}

.up_pftv_feature {
    cursor: pointer;
    fill-opacity: .6;
}

.up_pftv_feature:hover {
    fill-opacity: .9;
}

.up_pftv_activeFeature {
    fill-opacity: .9 !important;
}

.up_pftv_variation-chart .up_pftv_block-area {
    fill: lightgrey;
    stroke: none;
}

.up_pftv_variation-chart .up_pftv_block-area:hover {
    fill: darkslategrey;
    cursor: pointer;
}

.up_pftv_variation-chart .up_pftv_line {
    fill: none;
    stroke: darkgrey;
    stroke-width: 1px;
}

.up_pftv_variation-chart .up_pftv_line:hover,  .up_pftv_variation-chart .up_pftv_line:hover + .up_pftv_block-area {
    stroke: darkslategrey;
    cursor: pointer;
}

/* Dialogs */

.up_pftv_dialog-container {
  margin:0;padding:0;
}

.up_pftv_dialog-container li a {
  display: block;
  line-height: 2em;
  padding: 0 .2em;
  cursor: pointer;
}

.up_pftv_legend {
    vertical-align: sub;
    width: 1.5em;
    display: inline-block;
    height: 1em;
    border-radius: .4em;
    border: 2px solid #ABABAB;
    margin-right: .5em;
}

.up_pftv_legend_double {
    height: 3em !important;
}

.up_pftv_legend_text {
    line-height: 2em;
    display: inline-block;
    vertical-align: top;
}

/* Close button */
.up_pftv_tooltip-close {
    color: #FFF;
    background-color: #333333;
    position: absolute;
    top: -10px;
    right: -10px;
    cursor: pointer;
    border-radius: 20px;
    width: 20px;
    height: 20px;
    font-size: 14px !important;
    text-align: center;
    border: 1px solid #fff;
}

/* Tooltip */
.up_pftv_tooltip-pin-container {
    display: inline-block;
    float: left;
    padding: 4px 10px 0 0;
}

/*.up_pftv_icon-frame {
    border-radius: 20px;
    width: 20px;
    height: 20px;
    text-align: center;
    border: 1px solid;
    margin: .2em;
}*/

.up_pftv_iconContainer-unpinned {
    background-color: lightgrey !important;
    color: black !important;
}

.up_pftv_iconContainer-unpinned:hover {
    background-color: grey !important;
}

.up_pftv_iconContainer-pinned {
    background-color: black !important;
    color: white !important;
}

.up_pftv_tooltip-container, .up_pftv_popupDialog-container {
    z-index: 50000;
    position: absolute;
    opacity: 0;
    display: none;
}

.up_pftv_tooltip-container {
    min-width: 220px;
}

.up_pftv_popupDialog-container {
    border: 1px solid #557071;
    background-color: #ffffff;
    padding: 0.5em;
    min-width: 210px;
    text-align: left;
    font-size: 13px;
}

.up_pftv_popupDialog-container table {
    border: 0px;
    background-color: #FFF;
    width: 100%;
}

.up_pftv_popupDialog-container td {
    padding: .2em;
    margin: 0;
}

.up_pftv_popupDialog-container td:first-child {
    font-size: small;
}

.up_pftv_popupDialog-warning {

}
/* ... */

