Fixed overflow of long categories names

--- a/style/main.css
+++ b/style/main.css
@@ -111,6 +111,7 @@ svg {
     font-weight: 400;
     line-height: 2.1em;
     width: 198px;
+    max-width: 198px;
     vertical-align: bottom;
     padding: .5em;
     border: none;
